tests/spec/fail/generic_map_non_string_key.aja
fuc bad(m: map[int, str]) -> void:
    return
